--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@supabase/supabase-js": "^2.49.10",
     "@tsparticles/react": "^3.0.0",
     "@uiw/react-md-editor": "^4.0.7",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clerk": "^0.6.1",
     "clsx": "^2.1.1",
