--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "rollup-plugin-visualizer": "^5.9.0"
   }
 }
